# vax-misinfo-research

./: Dockerfile  README.md  data_to_txt.py  docker-compose.yml  pyproject.toml  schema.sql  video_ids.txt
app/: __main__.py  ai_proc.py  app.py  comment_proc.py  metrics.py  video_proc.py  video_search.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/comments/[video_id]/: page.tsx
frontend/src/app/video-metrics/: page.tsx
frontend/src/components/: header.tsx
